--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,38 +1,35 @@
 name: testapi
-description: "A new Flutter project."
-
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
+description: "A Flutter app for camera-based object detection with server API."
+publish_to: 'none'
 
 version: 1.0.0+1
 
 environment:
   sdk: ^3.7.2
 
-
 dependencies:
   flutter:
     sdk: flutter
-  camera: ^0.10.5+9
-  tflite_flutter: ^0.11.0
+  camera: ^0.11.0+1
+  http: ^1.2.2
   image: ^4.5.4
   volume_controller: ^3.3.3
   permission_handler: ^11.3.1
   flutter_tts: ^4.0.2
+  http_parser: ^4.0.2
   cupertino_icons: ^1.0.8
-  google_mlkit_object_detection: ^0.15.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons:
-flutter_icons:
-  image_path: "assets/logo.png"
-  android : true
+  flutter_launcher_icons: ^0.14.1
   flutter_lints: ^5.0.0
 
+flutter_icons:
+  image_path: "assets/logo.png"
+  android: true
 
 flutter:
   uses-material-design: true
   assets:
     - assets/logo.png
-
